Implemented virtual file structure
Implemented file structure to keep track of file and in future get diffs